--- a/app/src/main/res/layout/activity_constellation.xml
+++ b/app/src/main/res/layout/activity_constellation.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:lottie_fileName="lottie/starlight_anime.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="80dp"
+        android:paddingHorizontal="40dp"
+        android:paddingBottom="40dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="당신의\n감정 별자리를\n수집해보세요"
+            android:textAppearance="@style/title_text"
+            android:paddingBottom="142dp"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/iv_orion"
+            android:paddingBottom="80dp"/>
+
+        <!--수집하기 버튼-->
+        <include
+            layout="@layout/component_white_btn" />
+        <!--목록보기 버튼-->
+        <include
+            layout="@layout/component_white_btn"/>
+
+
+    </LinearLayout>
+
+    <!--수집한 경우-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="40dp"
+        android:background="#BF1F2127">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+            <include
+                layout="@layout/component_constellation_modal"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+</FrameLayout>
