--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -10,7 +10,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerInParent="true"
-        app:lottie_fileName="lottie/star_loading.json"
+        app:lottie_fileName="lottie/circle_loading.json"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
 
