--- a/app/src/main/res/layout/activity_recommand_action.xml
+++ b/app/src/main/res/layout/activity_recommand_action.xml
@@ -1,6 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/bgContent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--MARK: 액션 추천-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingVertical="40dp"
+        android:paddingHorizontal="40dp">
+
+        <TextView
+            android:id="@+id/tv_recommand_action"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="화산천\n런닝\n어때요?"
+            android:textAppearance="@style/title_text" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <!--FOLLOW: lottie 애니메이션-->
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:lottie_fileName="lottie/fire_anime.json"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <include
+                layout="@layout/component_no_glow_btn"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <!--MARK: 모달 창 화면-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#BF1F2127"
+        android:visibility="gone">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="54dp"
+            android:layout_centerVertical="true">
+
+            <!--FIXME: 모달창 컴포너트 불러오기-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <include
+                    layout="@layout/component_mission_modal"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</FrameLayout>
