--- a/app/src/main/res/layout/component_ghots_chat.xml
+++ b/app/src/main/res/layout/component_ghots_chat.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/some_id"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="10dp"
+    android:clipToOutline="true"
+    android:background="@drawable/btn_ghost_chat"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_ghost_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="안녕, 나는 뾰롱이라고 해!
+너의 답답한 마음을 나에게 털어놔봐.
+더 자세한 사주를 알려줄게. 나와 3번의 대화를 할 수 있어 !"
+        android:textAppearance="@style/chat_text"
+        />
+
+</RelativeLayout>
+
