--- a/app/src/main/res/layout/component_mission_modal.xml
+++ b/app/src/main/res/layout/component_mission_modal.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_mission_modal"
+    android:paddingVertical="10dp"
+    android:paddingHorizontal="10dp"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--MARK: 타이틀-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:paddingBottom="30dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/clock"
+            android:paddingEnd="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="미션 수락"
+            android:textAppearance="@style/title_text"/>
+    </LinearLayout>
+
+    <!--MARK: 설명-->
+    <TextView
+        android:paddingStart="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="오늘의 미션을 수락했습니다.\n오후 9시에 고스티니가 확인하러 올거에요!"
+        android:textAppearance="@style/chat_text"
+        android:paddingBottom="34.5dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
+        <include
+            layout="@layout/component_no_glow_btn"/>
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
