--- a/app/src/main/res/layout/component_user_chat.xml
+++ b/app/src/main/res/layout/component_user_chat.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingVertical="10dp"
+    android:paddingHorizontal="20dp"
+    android:background="@drawable/btn_user_chat">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_user_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="시팡라라라라랄"
+        android:textAppearance="@style/chat_text"
+        />
+
+
+
+</RelativeLayout>
