--- a/app/src/main/res/layout/activity_constellation_personal.xml
+++ b/app/src/main/res/layout/activity_constellation_personal.xml
@@ -125,6 +125,7 @@
         android:layout_height="wrap_content">
 
         <include
+            android:id="@+id/btn_next"
             layout="@layout/component_white_btn"/>
     </LinearLayout>
 
