--- a/app/src/main/res/layout/activity_saju_output.xml
+++ b/app/src/main/res/layout/activity_saju_output.xml
@@ -94,6 +94,7 @@
 
         <!-- 버튼 (고정, 스크롤 안됨) -->
         <LinearLayout
+            android:id="@+id/btn_generate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
