--- a/app/src/main/res/layout/component_no_glow_btn.xml
+++ b/app/src/main/res/layout/component_no_glow_btn.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/btn_purple"/>
 
     <TextView
+        android:id="@+id/tv_btn_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btnname"
