--- a/app/src/main/res/layout/component_white_btn.xml
+++ b/app/src/main/res/layout/component_white_btn.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/test2"/>
 
     <TextView
+        android:id="@+id/tv_btn_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
