--- a/app/src/main/res/layout/activity_constellation.xml
+++ b/app/src/main/res/layout/activity_constellation.xml
@@ -22,37 +22,51 @@
         android:paddingBottom="40dp">
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="당신의\n감정 별자리를\n수집해보세요"
             android:textAppearance="@style/title_text"
-            android:paddingBottom="142dp"/>
+            android:paddingBottom="68dp"/>
+
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:src="@drawable/iv_orion"
-            android:paddingBottom="80dp"/>
+            android:paddingBottom="48dp"
+            android:src="@drawable/iv_orion" />
 
-        <!--수집하기 버튼-->
-        <include
-            layout="@layout/component_white_btn" />
-        <!--목록보기 버튼-->
-        <include
-            layout="@layout/component_white_btn"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!--수집하기 버튼-->
+            <include
+                android:id="@+id/btn_select"
+                layout="@layout/component_white_btn" />
+            <!--목록보기 버튼-->
+            <include
+                android:id="@+id/btn_show"
+                layout="@layout/component_white_btn"/>
+        </LinearLayout>
+
 
 
     </LinearLayout>
 
     <!--수집한 경우-->
     <RelativeLayout
+        android:id="@+id/layout_modal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingHorizontal="40dp"
+        android:visibility="gone"
         android:background="#BF1F2127">
 
         <LinearLayout
+            android:id="@+id/layout_constellation_modal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true">
