--- a/app/src/main/res/layout/activity_constellation_select.xml
+++ b/app/src/main/res/layout/activity_constellation_select.xml
@@ -15,6 +15,7 @@
         app:lottie_loop="true"/>
     
     <LinearLayout
+        android:id="@+id/layout_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -23,6 +24,7 @@
         android:visibility="invisible">
 
         <TextView
+            android:id="@+id/tv_emotion_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="감정이르음~~!"
@@ -30,12 +32,14 @@
             android:paddingBottom="100dp"/>
 
         <ImageView
+            android:id="@+id/iv_star_emotion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/iv_star_happy"
             android:paddingBottom="100dp"/>
 
         <include
+            android:id="@+id/btn_next"
             layout="@layout/component_white_btn" />
 
     </LinearLayout>
