--- a/app/src/main/res/layout/activity_saju_input.xml
+++ b/app/src/main/res/layout/activity_saju_input.xml
@@ -1,93 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bgContent">
+    android:background="@color/bgContent"
+    android:paddingHorizontal="20dp">
 
+    <!--MARK: 상단 여백을 위한 가이드라인 (15%)-->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <!--MARK: 아이콘 + 타이틀 영역-->
     <LinearLayout
+        android:id="@+id/title_section"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="@+id/guideline_top"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_fire_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_fire"
+            android:layout_marginEnd="12dp"/>
+
+        <TextView
+            android:id="@+id/tv_input_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/input_title"
+            android:textAppearance="@style/title_text" />
+
+    </LinearLayout>
+
+    <!--MARK: 입력 필드 영역-->
+    <LinearLayout
+        android:id="@+id/input_section"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_marginTop="68dp"
+        app:layout_constraintTop_toBottomOf="@+id/title_section"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-
-        <!--MARK: 아이콘 + 타이틀 텍스트-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            />
-        <LinearLayout
-            android:id="@+id/fire_with_title"
+        <!--MARK: 이름 입력-->
+        <TextView
+            android:id="@+id/tv_name_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_marginBottom="10dp"
+            android:text="이름"
+            android:textAppearance="@style/title_text" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_fire"
-                android:layout_marginEnd="12dp"/>
+        <include
+            android:id="@+id/et_name"
+            layout="@layout/component_input_field" />
 
-            <TextView
-                android:layout_width="188dp"
-                android:layout_height="wrap_content"
-                android:text="@string/input_title"
-                android:textAppearance="@style/title_text" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="80dp"/>
-
-        <!--MARK: 입력필드-->
-        <LinearLayout
+        <!--MARK: 생년월일 입력-->
+        <TextView
+            android:id="@+id/tv_birthdate_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/fire_with_title">
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp"
+            android:text="생년월일"
+            android:textAppearance="@style/title_text" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="이름"
-                android:textAppearance="@style/title_text" />
+        <include
+            android:id="@+id/et_birthdate"
+            layout="@layout/component_input_field" />
 
-            <include layout="@layout/component_input_field" />
+    </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="90dp"
-                android:layout_marginBottom="10dp"
-                android:text="생년월일"
-                android:textAppearance="@style/title_text" />
-
-            <include layout="@layout/component_input_field" />
-
-
-        </LinearLayout>
-
-        <!--패딩-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="76dp">
-            <include
-                layout="@layout/component_no_glow_btn" />
-        </LinearLayout>
-
+    <!--MARK: 하단 버튼 영역-->
+    <LinearLayout
+        android:id="@+id/btn_generate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        
+        <include
+            layout="@layout/component_no_glow_btn" />
+            
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
