--- a/app/src/main/res/layout/component_mission_modal.xml
+++ b/app/src/main/res/layout/component_mission_modal.xml
@@ -22,6 +22,7 @@
             android:paddingEnd="10dp"/>
 
         <TextView
+            android:id="@+id/tv_modal_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="미션 수락"
@@ -30,6 +31,7 @@
 
     <!--MARK: 설명-->
     <TextView
+        android:id="@+id/tv_modal_description"
         android:paddingStart="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,6 +40,7 @@
         android:paddingBottom="34.5dp"/>
 
     <LinearLayout
+        android:id="@+id/btn_modal_ok"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp">
