--- a/app/src/main/res/layout/component_mission_modal.xml
+++ b/app/src/main/res/layout/component_mission_modal.xml
@@ -9,6 +9,7 @@
 
     <!--MARK: 타이틀-->
     <LinearLayout
+        android:id="@+id/layout_modal_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -16,6 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_modal_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/clock"
@@ -47,8 +49,5 @@
         <include
             layout="@layout/component_no_glow_btn"/>
     </LinearLayout>
-
-
-
 
 </LinearLayout>
