--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,38 +3,52 @@
     <style name="some_id">
         <item name="android:textSize">32sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="collect_star">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="title_text">
         <item name="android:textSize">32dp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="subtitle">
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="btn_title_text">
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 
     <style name="chat_ghost">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <!--플레이스 홀더 텍스트 스타일-->
     <style name="placeholder">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#66D9D9D9</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 
@@ -42,7 +56,34 @@
     <style name="chat_text">
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
     </style>
+
+    <!-- ⭐ HancomSans 폰트 전용 스타일들 -->
+    <style name="app_title">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:letterSpacing">0.02</item>
+    </style>
+
+    <style name="app_body">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">4dp</item>
+    </style>
+
+    <style name="app_button">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/hancomsans</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
 
 
