--- a/app/src/main/res/layout/activity_recommand_action.xml
+++ b/app/src/main/res/layout/activity_recommand_action.xml
@@ -25,11 +25,16 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
-        <!--FOLLOW: lottie 애니메이션-->
+        <!--FOLLOW: lottie 애니메이션 - ID 추가-->
         <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_animation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:lottie_fileName="lottie/fire_anime.json"/>
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:layout_gravity="center"
+            app:lottie_fileName="lottie/lt_loading_anime.json"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
 
         <Space
             android:layout_width="match_parent"
